--- a/Juban.mw
+++ b/Juban.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon juban.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Juban, Sorsogon
 | 1990 = 20671		
@@ -13,7 +14,6 @@
 |}}
 Say '''Juban''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 32,320 totoo. Walay kabaleg tan sukat to ya 121.49 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4703.	
 							
-
 ==Saray barangay==
 
 * Anog
@@ -42,7 +42,8 @@ Say '''Juban''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]
 * Tinago
 * Tughan
 
-
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
