--- a/Magallanes,_Sorsogon.mw
+++ b/Magallanes,_Sorsogon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon magallanes.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magallanes, Sorsogon
 | 1990 = 24754		
@@ -14,7 +15,6 @@
 Say '''Magallanes''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 
 37,038 totoo. Walay kabaleg tan sukat to ya 150.09 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4705.	
 									
-
 ==Saray barangay==
 
 * Aguada Norte
@@ -52,7 +52,8 @@ Say '''Magallanes''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilip
 * Tulatula Norte
 * Tulatula Sur
 
-	
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
