--- a/Matnog.mw
+++ b/Matnog.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon matnog.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Matnog, Sorsogon
 | 1990 = 25957		
@@ -14,7 +15,6 @@
 Say '''Matnog''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 41,101 
 totoo. Walay kabaleg tan sukat to ya 162.4 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4708.	
 							
-
 ==Saray barangay==
 
 * Balocawe
@@ -58,6 +58,8 @@ totoo. Walay kabaleg tan sukat to ya 162.4 sq. km. Sikato et walad kumadwa ya di
 * Tabunan (Pob.)
 * Tugas
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -65,6 +67,5 @@ totoo. Walay kabaleg tan sukat to ya 162.4 sq. km. Sikato et walad kumadwa ya di
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sorsogon}}
- 
-								
+ 							
 [[Category:Saray baley na Sorsogon]]
