--- a/Pilar,_Sorsogon.mw
+++ b/Pilar,_Sorsogon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon pilar.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pilar, Sorsogon
 | 1990 = 46268		
@@ -14,7 +15,6 @@
 Say '''Pilar''' et unaan ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 74,564 
 totoo. Walay kabaleg tan sukat to ya 248 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4714.	
 					
-
 ==Saray barangay==
 
 * Abas
@@ -67,8 +67,9 @@ totoo. Walay kabaleg tan sukat to ya 248 sq. km. Sikato et walad unaan ya distri
 * San Rafael
 * Santa Fe
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
