--- a/Prieto_Diaz.mw
+++ b/Prieto_Diaz.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon prieto diaz.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Prieto Diaz, Sorsogon
 | 1990 = 15324		
@@ -14,7 +15,6 @@
 Say '''Prieto Diaz''' et kumalima ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 
 22,442 totoo. Walay kabaleg tan sukat to ya 49.07 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4711.	
 						
-
 ==Saray barangay==
 
 * Brillante (Poblacion)
@@ -41,7 +41,8 @@ Say '''Prieto Diaz''' et kumalima ya klase baley ed luyag na [[Sorsogon]], [[Pil
 * Tupaz
 * Ulag
 
-	
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
