--- a/Santa_Magdalena.mw
+++ b/Santa_Magdalena.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon santa magdalena.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Magdalena, Sorsogon
 | 1990 = 12274		
@@ -14,7 +15,6 @@
 Say '''Santa Magdalena''' et kumalima ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to 
 et 16,848 totoo. Walay kabaleg tan sukat to ya 43.5 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4709.	
 				
-
 ==Saray barangay==
 
 * La Esperanza
@@ -32,8 +32,9 @@ et 16,848 totoo. Walay kabaleg tan sukat to ya 43.5 sq. km. Sikato et walad kuma
 * San Roque
 * San Sebastian
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
