--- a/Koronadal.mw
+++ b/Koronadal.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_south_cotabato_koronadal.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Koronadal''' et unaan ya klase siyudad ed luyag na [[South Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 158,273 totoo. <br> 	
-Walay kabaleg tan sukat to ya 277.00 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 9506. 			
+Walay kabaleg tan sukat to ya 277.00 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 9506. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{South Cotabato}}	
 									
 [[Category:Saray siyudad na Filipinas]]
