--- a/General_Santos.mw
+++ b/General_Santos.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_south_cotabato_general_santos.png|right|270px]] 							
+{{Infobox location}} 							
 									
 Say '''General Santos''' et unaan ya klase siyudad ed luyag na [[South Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 538,086 totoo. <br> 	
-Walay kabaleg tan sukat to ya 492.86 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9500. 			
+Walay kabaleg tan sukat to ya 492.86 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9500. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{South Cotabato}}	
 									
 [[Category:Saray siyudad na Filipinas]]
