--- a/Banga,_South_Cotabato.mw
+++ b/Banga,_South_Cotabato.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator south cotabato banga.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Banga, South Cotabato
 | 1990 = 59743		
@@ -14,7 +15,6 @@
 Say '''Banga''' et unaan ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 76,343 totoo. Walay kabaleg tan sukat to ya 240.35 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9511.
   
-
 ==Saray barangay==
 * Benitez (Pob.)
 * Cabudian
@@ -39,6 +39,8 @@ Unong ed 2010 Census, say papulasyon to et 76,343 totoo. Walay kabaleg tan sukat
 * San Vicente (Barrio 6)
 * Yangco Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -46,6 +48,5 @@ Unong ed 2010 Census, say papulasyon to et 76,343 totoo. Walay kabaleg tan sukat
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{South Cotabato}}
- 
-      
+    
 [[Category:Saray baley na South Cotabato]]
