--- a/Lake_Sebu.mw
+++ b/Lake_Sebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator south cotabato lake sebu.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lake Sebu, South Cotabato
 | 1990 = 34350		
@@ -14,7 +15,6 @@
 Say '''Lake Sebu''' et unaan ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 76,170 totoo. Walay kabaleg tan sukat to ya 702.00 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9506.
    
-
 ==Saray barangay==
 * Bacdulong
 * Denlag
@@ -36,12 +36,14 @@ Unong ed 2010 Census, say papulasyon to et 76,170 totoo. Walay kabaleg tan sukat
 * Upper Maculan
 * Tasiman
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{South Cotabato}}
- 
      
 [[Category:Saray baley na South Cotabato]]
