--- a/Norala.mw
+++ b/Norala.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator south cotabato norala.png|right|270px]]      
+{{Infobox location}}
+     
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Norala, South Cotabato
 | 1990 = 35566		
@@ -14,7 +15,6 @@
 Say '''Norala''' et kumatlo ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 44,635 totoo. Walay kabaleg tan sukat to ya 123.20 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9508.
      
-
 ==Saray barangay==
 * Dumaguil
 * Esperanza
@@ -31,6 +31,9 @@ Unong ed 2010 Census, say papulasyon to et 44,635 totoo. Walay kabaleg tan sukat
 * Tinago
 * Benigno Aquino, Jr
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
@@ -38,5 +41,4 @@ Unong ed 2010 Census, say papulasyon to et 44,635 totoo. Walay kabaleg tan sukat
 
 {{South Cotabato}}
  
-   
 [[Category:Saray baley na South Cotabato]]
