--- a/Santo_Niño,_South_Cotabato.mw
+++ b/Santo_Niño,_South_Cotabato.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator south cotabato santo nino.png|right|270px]]      
+{{Infobox location}}
+     
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santo Niño, South Cotabato
 | 1990 = 30076		
@@ -14,7 +15,6 @@
 Say '''Santo Niño''' et kumatlo ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 39,738 totoo. Walay kabaleg tan sukat to ya 86.20 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9509.
       
-
 ==Saray barangay==
 * Ambalgan
 * Guinsang-an
@@ -27,6 +27,9 @@ Unong ed 2010 Census, say papulasyon to et 39,738 totoo. Walay kabaleg tan sukat
 * Teresita
 * Sajaneba
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
@@ -34,5 +37,4 @@ Unong ed 2010 Census, say papulasyon to et 39,738 totoo. Walay kabaleg tan sukat
 
 {{South Cotabato}}
  
-  
 [[Category:Saray baley na South Cotabato]]
