--- a/Surallah.mw
+++ b/Surallah.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator south cotabato surallah.png|right|270px]]      
+{{Infobox location}}    
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Surallah, South Cotabato
@@ -15,7 +15,6 @@
 Say '''Surallah''' et unaan ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 76,035 totoo. Walay kabaleg tan sukat to ya 540.30 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9512.
        
-
 ==Saray barangay==
 * Buenavista
 * Centrala
@@ -35,12 +34,14 @@ Unong ed 2010 Census, say papulasyon to et 76,035 totoo. Walay kabaleg tan sukat
 * Upper Sepaka
 * Veterans
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{South Cotabato}}
- 
  
 [[Category:Saray baley na South Cotabato]]
