--- a/T'boli.mw
+++ b/T'boli.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator south cotabato t'boli.png|right|270px]]      
+{{Infobox location}}
+     
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> T'boli, South Cotabato
 | 1990 = 26346		
@@ -15,7 +16,6 @@
 Say '''T'boli''' et unaan ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 79,175 totoo. Walay kabaleg tan sukat to ya 895.83 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9513.
         
-
 ==Saray barangay==
 * Basag
 * Edwards (Pob.)
@@ -42,6 +42,9 @@ Unong ed 2010 Census, say papulasyon to et 79,175 totoo. Walay kabaleg tan sukat
 * Mongocayo
 * Salacafe
 * T'boli
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
