--- a/Tampakan.mw
+++ b/Tampakan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator south cotabato tampakan.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tampakan, South Cotabato
 | 1990 = 32373		
@@ -14,7 +15,6 @@
 Say '''Tampakan''' et kumadwa ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 36,254 totoo. Walay kabaleg tan sukat to ya 390.00 sq. km. Sikato et walad unaan  distrito. Say zip code to et 9507.
         
-
 ==Saray barangay==
 *Santa Cruz
 *Poblacion
@@ -30,6 +30,9 @@ Unong ed 2010 Census, say papulasyon to et 36,254 totoo. Walay kabaleg tan sukat
 *Pula Bato
 *Albagan
 *Tablu
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
