--- a/Tantangan.mw
+++ b/Tantangan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator south cotabato tantangan.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tantangan, South Cotabato
 | 1990 = 25526		
@@ -15,7 +16,6 @@
 Say '''Tantangan''' et kumatlo ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 40,461 totoo. Walay kabaleg tan sukat to ya 113.10 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9510.
         
-
 ==Saray barangay==
 * Bukay Pait
 * Cabuling
@@ -30,6 +30,9 @@ Unong ed 2010 Census, say papulasyon to et 40,461 totoo. Walay kabaleg tan sukat
 * San Felipe
 * New Cuyapo
 * Tinongcop
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
