--- a/Tupi.mw
+++ b/Tupi.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator south cotabato tupi.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tupi, South Cotabato
 | 1990 = 43232		
@@ -14,7 +15,6 @@
 Say '''Tupi''' et unaan ya klase baley ed luyag na [[South Cotabato]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 61,843 totoo. Walay kabaleg tan sukat to ya 228.00 sq. km. Sikato et walad unaan  distrito. Say zip code to et 9505.
         
-
 ==Saray barangay==
 * Acmonan
 * Bololmala
@@ -31,6 +31,9 @@ Unong ed 2010 Census, say papulasyon to et 61,843 totoo. Walay kabaleg tan sukat
 * Polonuling
 * Simbo
 * Tubeng
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
