--- a/Maasin.mw
+++ b/Maasin.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_southern_leyte_maasin.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Maasin''' et kumapat ya klase siyudad ed luyag na [[Southern Leyte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 81,250 totoo. <br> 	
-Walay kabaleg tan sukat to ya 211.71 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 6600. 			
+Walay kabaleg tan sukat to ya 211.71 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 6600.
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Southern Leyte}}
 									
 [[Category:Saray siyudad na Filipinas]]
