--- a/Anahawan.mw
+++ b/Anahawan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte anahawan.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Anahawan, Southern Leyte
 | 1990 = 7063		
@@ -14,7 +15,6 @@
 Say '''Anahawan''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 7,942 totoo. Walay kabaleg tan sukat to ya 58.09 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6610.
         
-
 ==Saray barangay==
 * Amagusan
 * Calintaan
@@ -31,6 +31,8 @@ Unong ed 2010 Census, say papulasyon to et 7,942 totoo. Walay kabaleg tan sukat 
 * Tagup-on
 * Cogon
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -38,6 +40,5 @@ Unong ed 2010 Census, say papulasyon to et 7,942 totoo. Walay kabaleg tan sukat 
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Southern Leyte}}
- 
 
 [[Category:Saray baley na Southern Leyte]]
