--- a/Bontoc,_Southern_Leyte.mw
+++ b/Bontoc,_Southern_Leyte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte bontoc.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bontoc, Southern Leyte
 | 1990 = 24818		
@@ -14,7 +15,6 @@
 Say '''Bontoc''' et kumapat ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 28,079 totoo. Walay kabaleg tan sukat to ya 102.10 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6604.
         
-
 ==Saray barangay==
 * Union
 * Banahao
@@ -56,6 +56,9 @@ Unong ed 2010 Census, say papulasyon to et 28,079 totoo. Walay kabaleg tan sukat
 * Pong-on
 * San Ramon
 * Santo Niño
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
