--- a/Hinunangan.mw
+++ b/Hinunangan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte hinunangan.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hinunangan, Southern Leyte
 | 1990 = 22454		
@@ -14,7 +15,6 @@
 Say '''Hinunangan''' et kumatlo ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 28,415 totoo. Walay kabaleg tan sukat to ya 170.58 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6608.
         
-
 ==Saray barangay==
 * Ambacon
 * Badiangon
@@ -57,6 +57,9 @@ Unong ed 2010 Census, say papulasyon to et 28,415 totoo. Walay kabaleg tan sukat
 * Upper Bantawon
 * Libas
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
@@ -64,5 +67,4 @@ Unong ed 2010 Census, say papulasyon to et 28,415 totoo. Walay kabaleg tan sukat
 
 {{Southern Leyte}}
  
-
 [[Category:Saray baley na Southern Leyte]]
