--- a/Hinundayan.mw
+++ b/Hinundayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte hinundayan.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hinundayan, Southern Leyte
 | 1990 = 9965		
@@ -13,7 +14,6 @@
 |}}        
 Say '''Hinundayan''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 11,890 totoo. Walay kabaleg tan sukat to ya 59.90 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6609.
-
 
 ==Saray barangay==
 * Amaga
@@ -33,6 +33,9 @@ Unong ed 2010 Census, say papulasyon to et 11,890 totoo. Walay kabaleg tan sukat
 * Plaridel
 * Sabang
 * Sagbok
+
+== Saray reperensiya ==
+{{Reflist}}
         
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
