--- a/Libagon.mw
+++ b/Libagon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte libagon.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libagon, Southern Leyte
 | 1990 = 11239		
@@ -14,7 +15,6 @@
 Say '''Libagon''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 14,352 totoo. Walay kabaleg tan sukat to ya 98.62 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6615.
         
-
 ==Saray barangay==
 * Biasong
 * Bogasong
@@ -30,6 +30,9 @@ Unong ed 2010 Census, say papulasyon to et 14,352 totoo. Walay kabaleg tan sukat
 * Punta
 * Talisay (Pob.)
 * Tigbao
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
