--- a/Liloan.mw
+++ b/Liloan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte liloan.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Liloan, Southern Leyte
 | 1990 = 18383		
@@ -14,7 +15,6 @@
 Say '''Liloan''' et kumapat ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 22,817 totoo. Walay kabaleg tan sukat to ya 50.30 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6612.
         
-
 ==Saray barangay==
 * Amaga
 * Anilao
@@ -41,6 +41,9 @@ Unong ed 2010 Census, say papulasyon to et 22,817 totoo. Walay kabaleg tan sukat
 * San Roque
 * Tabugon
 * Fatima
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
