--- a/Limasawa.mw
+++ b/Limasawa.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte limasawa.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Limasawa, Southern Leyte
 | 1990 = 4519		
@@ -14,7 +15,6 @@
 Say '''Limasawa''' et kumanem ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 5,835 totoo. Walay kabaleg tan sukat to ya 6.98 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6605.
      
-
 ==Saray barangay==
 *Cabulihan
 *Lugsongan
@@ -23,6 +23,8 @@ Unong ed 2010 Census, say papulasyon to et 5,835 totoo. Walay kabaleg tan sukat 
 *San Bernardo (Tigib)
 *Triana
 
+== Saray reperensiya ==
+{{Reflist}}
   
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
