--- a/Macrohon.mw
+++ b/Macrohon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte macrohon.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Macrohon, Southern Leyte
 | 1990 = 20416		
@@ -14,7 +15,6 @@
 Say '''Macrohon''' et kumapat ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 25,386 totoo. Walay kabaleg tan sukat to ya 126.39 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6601.
         
-
 ==Saray barangay==
 * Aguinaldo
 * Amparo
@@ -46,6 +46,9 @@ Unong ed 2010 Census, say papulasyon to et 25,386 totoo. Walay kabaleg tan sukat
 * Santa Cruz (Pob.)
 * Santo Rosario (Pob.)
 * Upper Ichon
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
