--- a/Malitbog,_Southern_Leyte.mw
+++ b/Malitbog,_Southern_Leyte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte malitbog.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malitbog, Southern Leyte
 | 1990 = 15946		
@@ -14,7 +15,6 @@
 Say '''Malitbog''' et kumapat ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 22,009 totoo. Walay kabaleg tan sukat to ya 74.97 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6603.
         
-
 ==Saray barangay==
 * Abgao
 * Aurora
@@ -53,6 +53,9 @@ Unong ed 2010 Census, say papulasyon to et 22,009 totoo. Walay kabaleg tan sukat
 * Pancil
 * San Isidro
 * Santo Niño
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
