--- a/Padre_Burgos,_Southern_Leyte.mw
+++ b/Padre_Burgos,_Southern_Leyte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte padre burgos.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Padre Burgos, Southern Leyte
 | 1990 = 7375		
@@ -14,7 +15,6 @@
 Say '''Padre Burgos''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 10,525 totoo. Walay kabaleg tan sukat to ya 25.65 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6602.
         
-
 ==Saray barangay==
 * Buenavista
 * Bunga
@@ -27,6 +27,9 @@ Unong ed 2010 Census, say papulasyon to et 10,525 totoo. Walay kabaleg tan sukat
 * Cantutang
 * Dinahugan
 * Tangkaan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
