--- a/Pintuyan.mw
+++ b/Pintuyan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte pintuyan.png|right|270px]]      
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pintuyan, Southern Leyte
 | 1990 = 8177		
@@ -14,7 +15,6 @@
 Say '''Pintuyan''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 9,261 totoo. Walay kabaleg tan sukat to ya 36.98 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6614.
         
-
 ==Saray barangay==
 * Badiang
 * Balongbalong
@@ -39,6 +39,9 @@ Unong ed 2010 Census, say papulasyon to et 9,261 totoo. Walay kabaleg tan sukat 
 * San Roque
 * Santa Cruz
 * Son-ok II
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
