--- a/Saint_Bernard.mw
+++ b/Saint_Bernard.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte saint bernard.png|right|270px]]      
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Saint Bernard, Southern Leyte
 | 1990 = 20760		
@@ -14,7 +15,6 @@
 Say '''Saint Bernard''' et kumapat ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 25,169 totoo. Walay kabaleg tan sukat to ya 100.20 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6613.
         
-
 ==Saray barangay==
 * Atuyan
 * Ayahag
@@ -46,6 +46,9 @@ Unong ed 2010 Census, say papulasyon to et 25,169 totoo. Walay kabaleg tan sukat
 * Tambis I
 * Tambis II
 * Hinabian
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
