--- a/San_Francisco,_Southern_Leyte.mw
+++ b/San_Francisco,_Southern_Leyte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte san francisco.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Francisco, Southern Leyte
 | 1990 = 11703		
@@ -14,7 +15,6 @@
 Say '''San Francisco''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 12,528 totoo. Walay kabaleg tan sukat to ya 68.60 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6611.
         
-
 ==Saray barangay==
 * Anislagon
 * Bongbong
@@ -38,6 +38,9 @@ Unong ed 2010 Census, say papulasyon to et 12,528 totoo. Walay kabaleg tan sukat
 * Pasanon
 * Punta
 * Santa Cruz
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
