--- a/San_Juan,_Southern_Leyte.mw
+++ b/San_Juan,_Southern_Leyte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte san juan.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Juan, Southern Leyte
 | 1990 = 10438		
@@ -13,8 +14,6 @@
 |}}        
 Say '''San Juan''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 14,073 totoo. Walay kabaleg tan sukat to ya 96.12 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6617.
-
-
 
 ==Saray barangay==
 * Agay-ay
@@ -35,6 +34,9 @@ Unong ed 2010 Census, say papulasyon to et 14,073 totoo. Walay kabaleg tan sukat
 * Osao
 * San Roque
 * Bobon B
+
+== Saray reperensiya ==
+{{Reflist}}
         
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
