--- a/San_Ricardo.mw
+++ b/San_Ricardo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte san ricardo.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Ricardo, Southern Leyte
 | 1990 = 9723		
@@ -14,7 +15,6 @@
 Say '''San Ricardo''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 10,078 totoo. Walay kabaleg tan sukat to ya 47.56 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6607.
         
-
 ==Saray barangay==
 * Benit
 * Bitoon
@@ -31,6 +31,9 @@ Unong ed 2010 Census, say papulasyon to et 10,078 totoo. Walay kabaleg tan sukat
 * Kinachawa
 * Inolinan
 * Looc
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
