--- a/Silago.mw
+++ b/Silago.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte silago.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Silago, Southern Leyte
 | 1990 = 9733		
@@ -14,7 +15,6 @@
 Say '''Silago''' et kumapat ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 12,310 totoo. Walay kabaleg tan sukat to ya 215.05 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6606.
         
-
 ==Saray barangay==
 * Balagawan
 * Catmon
@@ -31,6 +31,9 @@ Unong ed 2010 Census, say papulasyon to et 12,310 totoo. Walay kabaleg tan sukat
 * Tuba-on
 * Tubod
 * Imelda
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
