--- a/Sogod,_Southern_Leyte.mw
+++ b/Sogod,_Southern_Leyte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte sogod.png|right|270px]]      
+{{Infobox location}}
+      
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sogod, Southern Leyte
 | 1990 = 31342		
@@ -14,7 +15,6 @@
 Say '''Sogod''' et kumadwa ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 41,411 totoo. Walay kabaleg tan sukat to ya 192.70 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6616.
         
-
 ==Saray barangay==
 * Benit
 * Buac Daku
@@ -61,6 +61,9 @@ Unong ed 2010 Census, say papulasyon to et 41,411 totoo. Walay kabaleg tan sukat
 * Suba
 * Tampoong
 * Olisihan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
