--- a/Tomas_Oppus.mw
+++ b/Tomas_Oppus.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator southern leyte tomas oppus.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tomas Oppus, Southern Leyte
 | 1990 = 13192		
@@ -14,7 +15,6 @@
 Say '''Tomas Oppus''' et kumalima ya klase baley ed luyag na [[Southern Leyte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 15,807 totoo. Walay kabaleg tan sukat to ya 56.11 sq. km. Sikato et walad alenleneg  distrito. Say zip code to et 6605.
   
-
 ==Saray barangay==
 
 * Anahawan
@@ -48,6 +48,8 @@ Unong ed 2010 Census, say papulasyon to et 15,807 totoo. Walay kabaleg tan sukat
 * San Agustin(Lutaw)
 * Zervanda
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
