--- a/Bagumbayan.mw
+++ b/Bagumbayan.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator sultan kudarat bagumbayan.png|right|270px]]      
+{{Infobox location}}   
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bagumbayan, Sultan Kudarat
@@ -14,7 +14,6 @@
 |}}        
 Say '''Bagumbayan''' et unaan ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 63,700 totoo. Walay kabaleg tan sukat to ya 672.06 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9810.
-
 
 ==Saray barangay==
 * Bai Sarifinang  
@@ -37,6 +36,8 @@ Unong ed 2010 Census, say papulasyon to et 63,700 totoo. Walay kabaleg tan sukat
 * Titulok 
 * Tuka 
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -45,5 +46,4 @@ Unong ed 2010 Census, say papulasyon to et 63,700 totoo. Walay kabaleg tan sukat
 
 {{Sultan Kudarat}}
  
-        
 [[Category:Saray baley na Sultan Kudarat]]
