--- a/Columbio.mw
+++ b/Columbio.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat columbio.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Columbio, Sultan Kudarat
 | 1990 = 17567		
@@ -14,8 +15,6 @@
 Say '''Columbio''' et unaan ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 27,440 totoo. Walay kabaleg tan sukat to ya 926.15 sq. km. Sikato et walad unaan  distrito. Say zip code to et 9801.
     
-
-
 ==Saray barangay==
 * Bantangan (Lasak)  
 * Datablao 
@@ -34,6 +33,8 @@ Unong ed 2010 Census, say papulasyon to et 27,440 totoo. Walay kabaleg tan sukat
 * Sucob 
 * Telafas 
 
+== Saray reperensiya ==
+{{Reflist}}
    
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
