--- a/Esperanza,_Sultan_Kudarat.mw
+++ b/Esperanza,_Sultan_Kudarat.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat esperanza.png|right|270px]]      
+{{Infobox location}}
+     
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Esperanza, Sultan Kudarat
 | 1990 = 35585		
@@ -14,7 +15,6 @@
 Say '''Esperanza''' et unaan ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 63,207 totoo. Walay kabaleg tan sukat to ya 324.29 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9806.
  
-
 ==Saray barangay==
 * Ala  
 * Daladap 
@@ -36,6 +36,8 @@ Unong ed 2010 Census, say papulasyon to et 63,207 totoo. Walay kabaleg tan sukat
 * Salumping 
 * Villamor 
 
+== Saray reperensiya ==
+{{Reflist}}
     
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
