--- a/Isulan.mw
+++ b/Isulan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat isulan.png|right|270px]]      
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Isulan, Sultan Kudarat
 | 1990 = 56488		
@@ -14,7 +15,6 @@
 Say '''Isulan''' et unaan ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 86,602 totoo. Walay kabaleg tan sukat to ya 541.25 sq. km. Sikato et walad unaan  distrito. Say zip code to et 9805.
     
-
 ==Saray barangay==
 * Ala  
 * Bambad  
@@ -35,6 +35,8 @@ Unong ed 2010 Census, say papulasyon to et 86,602 totoo. Walay kabaleg tan sukat
 * Sampao 
 * Tayugo 
 
+== Saray reperensiya ==
+{{Reflist}}
    
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
