--- a/Kalamansig.mw
+++ b/Kalamansig.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat kalamansig.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kalamansig, Sultan Kudarat
 | 1990 = 30779		
@@ -14,7 +15,6 @@
 Say '''Kalamansig''' et unaan ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 46,408 totoo. Walay kabaleg tan sukat to ya 699.20 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9808.
      
-
 ==Saray barangay==
 * Bantogon (Santa Clara)  
 * Cadiz 
@@ -32,6 +32,8 @@ Unong ed 2010 Census, say papulasyon to et 46,408 totoo. Walay kabaleg tan sukat
 * Sangay 
 * Santa Maria 
 
+== Saray reperensiya ==
+{{Reflist}}
   
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
