--- a/Lambayong.mw
+++ b/Lambayong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat lambayong.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lambayong, Sultan Kudarat
 | 1990 = 39182		
@@ -13,7 +14,6 @@
 |}}        
 Say '''Lambayong''' et kumadwa ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 65,557 totoo. Walay kabaleg tan sukat to ya 226.88 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9802.
-   
 
 ==Saray barangay==
 * Caridad (Cuyapon)  
@@ -43,12 +43,14 @@ Unong ed 2010 Census, say papulasyon to et 65,557 totoo. Walay kabaleg tan sukat
 * Tumiao (Tinaga) 
 * Udtong 
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sultan Kudarat}}
- 
-     
+    
 [[Category:Saray baley na Sultan Kudarat]]
