--- a/Lebak.mw
+++ b/Lebak.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat lebak.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lebak, Sultan Kudarat
 | 1990 = 52428		
@@ -14,7 +15,6 @@
 Say '''Lebak''' et unaan ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 83,280 totoo. Walay kabaleg tan sukat to ya 470.86 sq. km. Sikato et walad unaan  distrito. Say zip code to et 9807.
    
-
 ==Saray barangay==
 * Aurelio F. Freires (Poblacion II) 
 * Barurao  
@@ -44,6 +44,8 @@ Unong ed 2010 Census, say papulasyon to et 83,280 totoo. Walay kabaleg tan sukat
 * Tran 
 * Villamonte 
 
+== Saray reperensiya ==
+{{Reflist}}
      
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
