--- a/Lutayan.mw
+++ b/Lutayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat lutayan.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lutayan, Sultan Kudarat
 | 1990 = 30276		
@@ -14,7 +15,6 @@
 Say '''Lutayan''' et kumadwa ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 56,179 totoo. Walay kabaleg tan sukat to ya 271.00 sq. km. Sikato et walad unaan  distrito. Say zip code to et 9803.
    
-
 ==Saray barangay==
 * Antong  
 * Bayasong 
@@ -28,6 +28,8 @@ Unong ed 2010 Census, say papulasyon to et 56,179 totoo. Walay kabaleg tan sukat
 * Sisiman 
 * Tamnag (Poblacion) 
 
+== Saray reperensiya ==
+{{Reflist}}
      
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
