--- a/Palimbang.mw
+++ b/Palimbang.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat palimbang.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Palimbang, Sultan Kudarat
 | 1990 = 33821		
@@ -13,8 +14,7 @@
 |}}        
 Say '''Palimbang''' et kumadwa ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 83,265 totoo. Walay kabaleg tan sukat to ya 484.85 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9809.
-       
-
+      
 ==Saray barangay==
 * Akol  
 * Badiangon 
@@ -57,12 +57,14 @@ Unong ed 2010 Census, say papulasyon to et 83,265 totoo. Walay kabaleg tan sukat
 * Wal 
 * Wasag 
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sultan Kudarat}}
- 
  
 [[Category:Saray baley na Sultan Kudarat]]
