--- a/President_Quirino,_Sultan_Kudarat.mw
+++ b/President_Quirino,_Sultan_Kudarat.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat president quirino.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> President Quirino, Sultan Kudarat
 | 1990 = 23591		
@@ -14,7 +15,6 @@
 Say '''President Quirino''' et kumatlo ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 38,753 totoo. Walay kabaleg tan sukat to ya 208.40 sq. km. Sikato et walad unaan  distrito. Say zip code to et 9804.
         
-
 ==Saray barangay==
 * Bagumbayan  
 * Bannawag 
@@ -35,6 +35,9 @@ Unong ed 2010 Census, say papulasyon to et 38,753 totoo. Walay kabaleg tan sukat
 * Suben 
 * Tinaungan 
 * Tual (Liguasan) 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
