--- a/Senator_Ninoy_Aquino,_Sultan_Kudarat.mw
+++ b/Senator_Ninoy_Aquino,_Sultan_Kudarat.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sultan kudarat sen. ninoy aquino.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Senator Ninoy Aquino, Sultan Kudarat
 | 1990 = 20879		
@@ -14,7 +15,6 @@
 Say '''Senator Ninoy Aquino''' et kumatlo ya klase baley ed luyag na [[Sultan Kudarat]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 43,508 totoo. Walay kabaleg tan sukat to ya 320.00 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 9811.
         
-
 ==Saray barangay==
 * Banali  
 * Basag 
@@ -36,6 +36,9 @@ Unong ed 2010 Census, say papulasyon to et 43,508 totoo. Walay kabaleg tan sukat
 * Sewod 
 * Tacupis 
 * Tinalon 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
