--- a/Banguingui.mw
+++ b/Banguingui.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu tongkil.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Banguingui, Sulu
 | 1990 = 10469		
@@ -14,7 +15,6 @@
 Say '''Banguingui''' et kumapat ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 17,802 totoo. Walay kabaleg tan sukat to ya 352.59 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7406.
         
-
 ==Saray barangay==
 * Bakkaan 
 * Bangalaw 
@@ -31,6 +31,8 @@ Unong ed 2010 Census, say papulasyon to et 17,802 totoo. Walay kabaleg tan sukat
 * Tattalan 
 * Tinutungan
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -39,5 +41,4 @@ Unong ed 2010 Census, say papulasyon to et 17,802 totoo. Walay kabaleg tan sukat
 
 {{Sulu}}
  
-
 [[Category:Saray baley na Sulu]]
