--- a/Hadji_Panglima_Tahil.mw
+++ b/Hadji_Panglima_Tahil.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu hadji panglima tahil.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hadji Panglima Tahil, Sulu
 | 1990 = 4153		
@@ -14,7 +15,6 @@
 Say '''Hadji Panglima Tahil''' et kumanem ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 5,850 totoo. Walay kabaleg tan sukat to ya 67.90 sq. km. Sikato et walad unaan  distrito. Say zip code to et 7413.
         
-
 ==Saray barangay==
 * Bangas (Pob.) 
 * Bubuan  
@@ -22,6 +22,8 @@ Unong ed 2010 Census, say papulasyon to et 5,850 totoo. Walay kabaleg tan sukat 
 * Pag-asinan 
 * Teomabal
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
