--- a/Indanan.mw
+++ b/Indanan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu indanan.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Indanan, Sulu
 | 1990 = 41969		
@@ -14,7 +15,6 @@
 Say '''Indanan''' et kumatlo ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 65,858 totoo. Walay kabaleg tan sukat to ya 170.72 sq. km. Sikato et walad unaan  distrito. Say zip code to et 7407.
  
-
 ==Saray barangay==
 * Adjid  
 * Bangalan 
@@ -51,6 +51,8 @@ Unong ed 2010 Census, say papulasyon to et 65,858 totoo. Walay kabaleg tan sukat
 * Tubig Parang 
 * Tumantangis 
 
+== Saray reperensiya ==
+{{Reflist}}
       
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
