--- a/Jolo.mw
+++ b/Jolo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu jolo.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jolo, Sulu
 | 1990 = 53055		
@@ -15,7 +16,6 @@
 Say '''Jolo''' et unaan ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 118,307 totoo. Walay kabaleg tan sukat to ya 126.40 sq. km. Sikato et walad unaan  distrito. Say zip code to et 7400.
       
-
 ==Saray barangay==
 * Asturias  
 * Bus-Bus 
@@ -26,12 +26,14 @@ Unong ed 2010 Census, say papulasyon to et 118,307 totoo. Walay kabaleg tan suka
 * Walled City
 * Tulay
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sulu}}
- 
   
 [[Category:Saray baley na Sulu]]
