--- a/Kalingalan_Caluang.mw
+++ b/Kalingalan_Caluang.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu kalingalan caluang.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kalingalan Caluang, Sulu
 | 1990 = 15824		
@@ -15,7 +16,6 @@
 Say '''Kalingalan Caluang''' et kumalima ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 26,848 totoo. Walay kabaleg tan sukat to ya 166.50 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7416.
         
-
 ==Saray barangay==
 * Kambing  
 * Kanlagay 
@@ -27,6 +27,8 @@ Unong ed 2010 Census, say papulasyon to et 26,848 totoo. Walay kabaleg tan sukat
 * Pitogo 
 * Tunggol
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
