--- a/Lugus.mw
+++ b/Lugus.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu lugus.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lugus, Sulu
 | 1990 = 14907		
@@ -14,7 +15,6 @@
 Say '''Lugus''' et kumalima ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 19,839 totoo. Walay kabaleg tan sukat to ya 133.04 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7411.
         
-
 ==Saray barangay==
 * Alu Bus-Bus  
 * Alu-Duyong 
@@ -33,6 +33,9 @@ Unong ed 2010 Census, say papulasyon to et 19,839 totoo. Walay kabaleg tan sukat
 * Parian Kayawan 
 * Sibul 
 * Tingkangan 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
