--- a/Luuk.mw
+++ b/Luuk.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu luuk.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Luuk, Sulu
 | 1990 = 29378		
@@ -14,7 +15,6 @@
 Say '''Luuk''' et kumatlo ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 29,897 totoo. Walay kabaleg tan sukat to ya 313.04 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7404.
      
-
 ==Saray barangay==
 * Bual 
 * Guimbaun 
@@ -29,6 +29,8 @@ Unong ed 2010 Census, say papulasyon to et 29,897 totoo. Walay kabaleg tan sukat
 * Tubig-Puti (Pob.) 
 * Tulayan Island 
 
+== Saray reperensiya ==
+{{Reflist}}
    
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
