--- a/Maimbung.mw
+++ b/Maimbung.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu maimbung.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maimbung, Sulu
 | 1990 = 17251		
@@ -14,7 +15,6 @@
 Say '''Maimbung''' et kumalima ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 28,445 totoo. Walay kabaleg tan sukat to ya 77.50 sq. km. Sikato et walad unaan  distrito. Say zip code to et 7409.
         
-
 ==Saray barangay==
 * Anak Jati
 * Bato Ugis
@@ -43,6 +43,9 @@ Unong ed 2010 Census, say papulasyon to et 28,445 totoo. Walay kabaleg tan sukat
 * Tandu Patong
 * Tubig-Samin
 * Upper Tambaking
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
