--- a/Panamao.mw
+++ b/Panamao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu old panamao.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Old Panamao, Sulu
 | 1990 = 27189		
@@ -14,7 +15,6 @@
 Say '''Old Panamao''' et kumapat ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 37,933 totoo. Walay kabaleg tan sukat to ya 107.57 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7402.
      
-
 ==Saray barangay==
 * Asin  
 * Bakud
@@ -48,12 +48,14 @@ Unong ed 2010 Census, say papulasyon to et 37,933 totoo. Walay kabaleg tan sukat
 * Tubig Jati
 * Upper Patibulan 
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sulu}}
- 
    
 [[Category:Saray baley na Sulu]]
