--- a/Omar.mw
+++ b/Omar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu omar.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Omar, Sulu
 | 1990 = 		
@@ -14,7 +15,6 @@
 Say '''Omar''' et kumanem ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 18,098 totoo. Walay kabaleg tan sukat to ya 180.98 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7404.
         
-
 ==Saray barangay==
 * Andalan  
 * Angilan 
@@ -24,6 +24,9 @@ Unong ed 2010 Census, say papulasyon to et 18,098 totoo. Walay kabaleg tan sukat
 * Niangkaan 
 * Sucuban 
 * Tangkuan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
