--- a/Pandami.mw
+++ b/Pandami.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu pandami.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pandami, Sulu
 | 1990 = 17159		
@@ -14,7 +15,6 @@
 Say '''Pandami''' et kumapat ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 22,474 totoo. Walay kabaleg tan sukat to ya 170.89 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7400.
         
-
 ==Saray barangay==
 * Baligtang  
 * Bud sibaud 
@@ -32,6 +32,9 @@ Unong ed 2010 Census, say papulasyon to et 22,474 totoo. Walay kabaleg tan sukat
 * South Manubul 
 * Suba-suba 
 * Tenga Manubul
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
