--- a/Panglima_Estino.mw
+++ b/Panglima_Estino.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu panglima estino.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Panglima Estino, Sulu
 | 1990 = 15683		
@@ -14,7 +15,6 @@
 Say '''Panglima Estino''' et kumalima ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 27,724 totoo. Walay kabaleg tan sukat to ya 125.10 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7415.
         
-
 ==Saray barangay==
 * Gagguil
 * Gata-gata
@@ -28,6 +28,9 @@ Unong ed 2010 Census, say papulasyon to et 27,724 totoo. Walay kabaleg tan sukat
 * Pandakan
 * Punay (Pob.)
 * Tiptipon
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
