--- a/Pangutaran.mw
+++ b/Pangutaran.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu pangutaran.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pangutaran, Sulu
 | 1990 = 17122		
@@ -14,7 +15,6 @@
 Say '''Pangutaran''' et kumapat ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 28,461 totoo. Walay kabaleg tan sukat to ya 258.10 sq. km. Sikato et walad unaan  distrito. Say zip code to et 7414.
         
-
 ==Saray barangay==
 * Alu Bunah  
 * Bangkilay 
@@ -32,6 +32,9 @@ Unong ed 2010 Census, say papulasyon to et 28,461 totoo. Walay kabaleg tan sukat
 * Tonggasang 
 * Tubig Nonok 
 * Tubig Sallang 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
