--- a/Parang.mw
+++ b/Parang.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu parang.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Parang, Sulu
 | 1990 = 43273		
@@ -13,8 +14,7 @@
 |}}        
 Say '''Parang''' et kumadwa ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 58,028 totoo. Walay kabaleg tan sukat to ya 258.00 sq. km. Sikato et walad unaan  distrito. Say zip code to et 7408.
-     
-
+    
 ==Saray barangay==
 * Alu Layag-Layag 
 * Alu Pangkoh 
@@ -58,6 +58,8 @@ Unong ed 2010 Census, say papulasyon to et 58,028 totoo. Walay kabaleg tan sukat
 * Tumangas 
 * Wanni Piyanjihan 
 
+== Saray reperensiya ==
+{{Reflist}}
    
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
