--- a/Patikul.mw
+++ b/Patikul.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu patikul.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Patikul, Sulu
 | 1990 = 30455		
@@ -14,7 +15,6 @@
 Say '''Patikul''' et kumatlo ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 42,036 totoo. Walay kabaleg tan sukat to ya 330.04 sq. km. Sikato et walad unaan  distrito. Say zip code to et 7401.
         
-
 ==Saray barangay==
 * Anuling  
 * Bakong 
@@ -46,6 +46,9 @@ Unong ed 2010 Census, say papulasyon to et 42,036 totoo. Walay kabaleg tan sukat
 * Timpok 
 * Tugas 
 * Umangay 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
