--- a/Talipao.mw
+++ b/Talipao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu talipao.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talipao, Sulu
 | 1990 = 66261		
@@ -14,7 +15,6 @@
 Say '''Talipao''' et unaan ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 75,173 totoo. Walay kabaleg tan sukat to ya 380.57 sq. km. Sikato et walad unaan  distrito. Say zip code to et 7403.
         
-
 ==Saray barangay==
 * Andalan  
 * Bagsak
@@ -68,6 +68,9 @@ Unong ed 2010 Census, say papulasyon to et 75,173 totoo. Walay kabaleg tan sukat
 * Upper Laus
 * Upper Sinumaan 
 * Upper Talipao
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
