--- a/Alegria,_Surigao_del_Norte.mw
+++ b/Alegria,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte alegria.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alegria, Surigao del Norte
 | 1990 = 9715		
@@ -14,7 +15,6 @@
 Say '''Alegria''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 14,539 totoo. Walay kabaleg tan sukat to ya 65.28 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8425.
 
-
 ==Saray barangay==
 * Poblacion (Alegria) 	
 * Alipao 	
@@ -29,6 +29,8 @@ Unong ed 2010 Census, say papulasyon to et 14,539 totoo. Walay kabaleg tan sukat
 * Anahaw 	
 * Gamuton
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -36,6 +38,5 @@ Unong ed 2010 Census, say papulasyon to et 14,539 totoo. Walay kabaleg tan sukat
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Surigao del Norte}}
- 
-        
+       
 [[Category:Saray baley na Surigao del Norte]]
