--- a/Bacuag.mw
+++ b/Bacuag.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator surigao del norte bacuag.png|right|270px]]      
+{{Infobox location}}  
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bacuag, Surigao del Norte
@@ -15,7 +15,6 @@
 Say '''Bacuag''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 13,211 totoo. Walay kabaleg tan sukat to ya 95.85 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8408.
      
-
 ==Saray barangay==
 * Cabugao  
 * Cambuayon 
@@ -27,12 +26,14 @@ Unong ed 2010 Census, say papulasyon to et 13,211 totoo. Walay kabaleg tan sukat
 * Pungtod 
 * Santo Rosario
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Surigao del Norte}}
- 
    
 [[Category:Saray baley na Surigao del Norte]]
