--- a/Burgos,_Surigao_del_Norte.mw
+++ b/Burgos,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte burgos.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Burgos, Surigao del Norte
 | 1990 = 2617		
@@ -14,7 +15,6 @@
 Say '''Burgos''' et kumanem ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 4,058 totoo. Walay kabaleg tan sukat to ya 19.27 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8424.
       
-
 ==Saray barangay==
 * Baybay  
 * Bitaug 
@@ -23,12 +23,14 @@ Unong ed 2010 Census, say papulasyon to et 4,058 totoo. Walay kabaleg tan sukat 
 * Poblacion 2 
 * San Mateo
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Surigao del Norte}}
- 
-  
+   
 [[Category:Saray baley na Surigao del Norte]]
