--- a/Gigaquit.mw
+++ b/Gigaquit.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte gigaquit.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gigaquit, Surigao del Norte
 | 1990 = 13715		
@@ -14,7 +15,6 @@
 Say '''Gigaquit''' et kumapat ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 18,784 totoo. Walay kabaleg tan sukat to ya 138.11 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8419.
        
-
 ==Saray barangay==
 * Alambique (Pob.)  
 * Anibongan 
@@ -30,6 +30,8 @@ Unong ed 2010 Census, say papulasyon to et 18,784 totoo. Walay kabaleg tan sukat
 * Villaflor 
 * Villafranca
 
+== Saray reperensiya ==
+{{Reflist}}
  
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
