--- a/Malimono.mw
+++ b/Malimono.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte malimono.png|right|270px]]      
+{{Infobox location}}
+     
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malimono, Surigao del Norte
 | 1990 = 16208		
@@ -15,7 +16,6 @@
 Say '''Malimono''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 18,316 totoo. Walay kabaleg tan sukat to ya 80.13 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8407.
         
-
 ==Saray barangay==
 * Bunyasan
 * Cagtinae
@@ -31,6 +31,9 @@ Unong ed 2010 Census, say papulasyon to et 18,316 totoo. Walay kabaleg tan sukat
 * San Isidro (Poblacion)
 * Tinago
 * Villariza
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
