--- a/Placer,_Surigao_del_Norte.mw
+++ b/Placer,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte placer.png|right|270px]]      
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Placer, Surigao del Norte
 | 1990 = 18478		
@@ -14,7 +15,6 @@
 Say '''Placer''' et kumapat ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 24,600 totoo. Walay kabaleg tan sukat to ya 61.29 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8420.
         
-
 ==Saray barangay==
 * Amoslog
 * Anislagan
@@ -36,6 +36,9 @@ Unong ed 2010 Census, say papulasyon to et 24,600 totoo. Walay kabaleg tan sukat
 * Santa Cruz
 * Suyoc
 * Tagbongabong
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
