--- a/Santa_Monica.mw
+++ b/Santa_Monica.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_surigao del norte santa monica.png |270px|right]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Monica, Surigao del Norte
@@ -31,6 +31,8 @@ Say Santa Monica walay 11 ya [[baranggay]]:
 * T. Arlan (Pob.) 
 * Tangbo
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
