--- a/Sison,_Surigao_del_Norte.mw
+++ b/Sison,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte sison.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sison, Surigao del Norte
 | 1990 = 8269		
@@ -28,6 +29,8 @@ Unong ed 2010 Census, say papulasyon to et 11,377 totoo. Walay kabaleg tan sukat
 * Tinogpahan 
 * Upper Patag
 
+== Saray reperensiya ==
+{{Reflist}}
       
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
