--- a/Tagana-an.mw
+++ b/Tagana-an.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte tagana-an.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tagana-an, Surigao del Norte
 | 1990 = 11585		
@@ -14,7 +15,6 @@
 Say '''Tagana-an''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 15,366 totoo. Walay kabaleg tan sukat to ya 77.29 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8403.
         
-
 ==Saray barangay==
 * Aurora (Pob.)  
 * Azucena (Pob.) 
@@ -30,6 +30,9 @@ Unong ed 2010 Census, say papulasyon to et 15,366 totoo. Walay kabaleg tan sukat
 * Talavera 
 * Union 
 * Upper Libas
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
