--- a/Bislig.mw
+++ b/Bislig.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_surigao_del_sur_bislig.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Bislig''' et kumatlo ya klase siyudad ed luyag na [[Surigao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 96,578 totoo. <br> 	
-Walay kabaleg tan sukat to ya 331.80 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8311. 			
+Walay kabaleg tan sukat to ya 331.80 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8311. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Surigao del Sur}}	
 									
 [[Category:Saray siyudad na Filipinas]]
