--- a/Tandag.mw
+++ b/Tandag.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_surigao_del_sur_tandag.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tandag''' et kumanem ya klase siyudad ed luyag na [[Surigao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 52,114 totoo. <br> 	
-Walay kabaleg tan sukat to ya 291.73 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8300. 			
+Walay kabaleg tan sukat to ya 291.73 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8300. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Surigao del Sur}}	
 									
 [[Category:Saray siyudad na Filipinas]]
