--- a/Cortes,_Surigao_del_Sur.mw
+++ b/Cortes,_Surigao_del_Sur.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator surigao del sur cortes.png|right|270px]]      
+{{Infobox location}}   
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cortes, Surigao del Sur
@@ -15,7 +15,6 @@
 Say '''Cortes''' et kumapat ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 15,541 totoo. Walay kabaleg tan sukat to ya 127.08 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8313.
         
-
 ==Saray barangay==
 * Balibadon
 * Barobo  
@@ -30,6 +29,9 @@ Unong ed 2010 Census, say papulasyon to et 15,541 totoo. Walay kabaleg tan sukat
 * Tigao 
 * Tuboran 
 * Uba
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
