--- a/Marihatag.mw
+++ b/Marihatag.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur marihatag.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Marihatag, Surigao del Sur
 | 1990 = 10663		
@@ -15,7 +16,6 @@
 Say '''Marihatag''' et kumatlo ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 17,926 totoo. Walay kabaleg tan sukat to ya 312.50 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8306.
         
-
 ==Saray barangay==
 * Alegria  
 * Amontay 
@@ -29,6 +29,9 @@ Unong ed 2010 Census, say papulasyon to et 17,926 totoo. Walay kabaleg tan sukat
 * San Isidro 
 * San Pedro 
 * Santa Cruz
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
