--- a/Bamban.mw
+++ b/Bamban.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator tarlac bamban.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bamban, Tarlac
 | 1990 = 35639		
@@ -33,6 +34,14 @@ Say Bamban walay 15 ya [[baranggay]]:
 * Santo Niño 
 * Virgen de los Remedios (Pacalcal)
 
+== Saray reperensiya ==
+{{Reflist}}
+
+==Saray gawing ed labas==
+*[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
+*[http://www.census.gov.ph/ Philippine Census Information]
+*[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
+
 {{Geographic location
  | Centre    = Bamban
  | North     = [[Capas, Tarlac|Capas]]
@@ -42,11 +51,6 @@ Say Bamban walay 15 ya [[baranggay]]:
  | West      = [[Botolan, Zambales]]
 }}
       
-==Saray gawing ed labas==
-*[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
-*[http://www.census.gov.ph/ Philippine Census Information]
-*[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
-
 {{Tarlac}}
    
 [[Category:Saray baley na Tarlac]]
