--- a/Capas.mw
+++ b/Capas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator tarlac capas.png|right|270px]]      
+{{Infobox location}}
+     
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Capas, Tarlac
 | 1990 = 61205		
@@ -37,6 +38,9 @@ Say Capas walay 20 ya [[baranggay]]:
 * Santo Rosario 
 * Talaga 
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
@@ -44,5 +48,4 @@ Say Capas walay 20 ya [[baranggay]]:
 
 {{Tarlac}}
  
-
 [[Category:Saray baley na Tarlac]]
