--- a/Concepcion,_Tarlac.mw
+++ b/Concepcion,_Tarlac.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator tarlac concepcion.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Concepcion, Tarlac
 | 1990 = 103146		
@@ -60,6 +61,9 @@ Unong ed 2010 Census, say papulasyon to et 139,832 totoo. Walay kabaleg tan suka
 * Talimunduc San Miguel 
 * Telabanca 
 * Tinang
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
