--- a/La_Paz,_Tarlac.mw
+++ b/La_Paz,_Tarlac.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator tarlac la paz.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> La Paz, Tarlac
 | 1990 = 41946		
@@ -45,6 +46,8 @@ Say La Paz walay 21 ya [[baranggay]]:
 * Sierra
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
